[tool.poetry]
name = "py-dsa"
version = "0.1.0"
description = "Python Tips & Tricks with Algorithm & Data Structure Seasoning"
authors = ["Sepehr <bazyar.sepehr@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.3"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
